<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ClipboardCleaner</string>
    <string name="toast_clipboard_cleaned">Clipboard has been cleaned</string>
    <string name="toast_clipboard_clean_failed">Clipboard clean failed</string>
    <string name="toast_clipboard_is_empty">Clipboard is empty</string>
    <string name="toast_clipboard_nothing">Nothing needs to be cleaned</string>

    <string name="action_clipboard_clean">Clean clipboard</string>
    <string name="action_clipboard_clean_short">Clean</string>
    <string name="action_clipboard_content">Show clipboard</string>
    <string name="action_clipboard_content_short">Content</string>

    <string name="shortcut_disabled">Disabled</string>

    <string name="introduction">ClipboardCleaner is here to prevent your clipboard from being used casually, secure your copied password, and defend your privacy!</string>

    <string name="service_title">Service</string>
    <string name="service_content">Create a service running in the background. Reset your clipboard if it\'s changed or notify you. This solution is efficient but battery-draining.</string>
    <string name="service_clean">Clean clipboard if it\'s changed</string>
    <string name="service_report">Report to me if the clipboard\'s changed</string>
    <string name="service_status">Status: %s</string>
    <string name="service_status_running">Running</string>
    <string name="service_status_stopped">Stopped</string>
    <string name="service_start">Start Service</string>
    <string name="service_stop">Stop Service</string>
    <string name="service_started">ClipboardCleaner Service Started</string>
    <string name="service_stopped">ClipboardCleaner Service Stopped</string>

    <string name="service_channel_name">ClipboardCleaner notification channel</string>
    <string name="service_notif_title">Your clipboard is under the protection</string>

    <string name="service_clean_timeout_template" formatted="false">Clean the clipboard after %s (click here to edit)</string>
    <string name="service_clean_timeout">Timeout</string>
    <string name="service_clean_after_seconds_template">Clipboard will be cleaned in %s.</string>

    <plurals name="seconds">
        <item quantity="one">1 second</item>
        <item quantity="other"><xliff:g example="7" id="number">%s</xliff:g> seconds</item>
    </plurals>

    <string name="widget_title">Widget</string>
    <string name="widget_content">Create widgets on your home screen. Click them to reset clipboard or see clipboard content. \n\nYou can find them in the widget list.</string>

    <string name="shortcut_title">Shortcut</string>
    <string name="shortcut_content">Create an app shortcut on your home screen. Click them to reset clipboard or see clipboard content.</string>
    <string name="shortcut_create_clean">Add \"Clean\" Shortcut</string>
    <string name="shortcut_create_content">Add \"Show Content\" Shortcut</string>
    <string name="shortcut_no_permission">App doesn\'t have enough permissions</string>
    <string name="shortcut_have_permission">Permission granted! Please create shortcuts now.</string>

    <string name="tile_title">Quick Setting Tile</string>
    <string name="tile_content">Add a Quick Setting Tile to your notification bar. Click them to reset clipboard or see clipboard content. \n\nYou can find them in the quick settings edit screen.</string>

    <string name="assistant_title">System Assistant App</string>
    <string name="assistant_content">Set this app as the system assistant app and use it by long-pressing the home button or swiping from the bottom corners.</string>
    <string name="assistant_open_settings">Open assistant settings</string>

    <string name="setting_title">Setting</string>
    <string name="setting_action_save">Save</string>
    <string name="setting_message_saved">Saved</string>

    <string name="setting_keyword_title">Keyword Filter</string>
    <string name="setting_keyword_content">If enabled, ClipboardCleaner will only clean the content that includes keywords.</string>

    <string name="setting_keyword_normal_title">Keyword</string>
    <string name="setting_keyword_regex_title">Regex</string>
    <string name="setting_keyword_add_a11y">Add a new keyword</string>
    <string name="setting_keyword_remove_a11y">Remove keyword %s</string>

    <string name="warning_title">Possible reasons for the app failure</string>
    <string name="warning_q">From Android 10(Q), Non-input-method apps <b>can\'t get, modify, and listen to the clipboard in the background</b>. Although this app tries its best, it still may fail, and the listening to clipboard changes is unavailable for now. <b>Please test the app yourself before use.</b></string>
    <string name="warning_other_apps">If you see multiple clips or clip history, it means something like <b>the keyboard app stores them</b>. In this case, this app fails.</string>
    <string name="warning_keep_using">Continue to Use</string>

    <string name="source_code">Source Code</string>

</resources>
